--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\AddUpdateTaskCommand.cs" />
+    <Compile Include="Command\UserViewModel.cs" />
     <Compile Include="IServices\ITaskService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TaskService.cs" />
