--- a/Utilities/packages.config
+++ b/Utilities/packages.config
@@ -4,10 +4,14 @@
   <package id="Autofac.Configuration" version="4.0.1" targetFramework="net452" />
   <package id="Autofac.Extras.DynamicProxy" version="4.2.1" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net452" />
+  <package id="Autofac.WebApi" version="3.1.0" targetFramework="net452" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.Configuration" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
 </packages>
